--- a/style.css
+++ b/style.css
@@ -140,3 +140,135 @@ li{
 .fa-facebook{
     color: #385998;
 }
+
+.skills{
+    /* width: 100%; */
+    height: 800px;
+    background-color: #eee;
+}
+.skills-inner{
+    width: 1200px;
+    height: 800px;
+    margin: 0 auto;
+
+    padding-top: 100px;
+}
+.skills h2{
+    font-size: 30px;
+    color: #ff6a6a;
+}
+.skills h1{
+    font-size: 50px;
+}
+.skills .contents{
+    width: 1200px;
+    height: 400px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.skills .contents li{
+    width: 350px;
+    height: 350px;
+    background-color: white;
+
+    padding: 15px;
+    font-size: 20px;
+    text-align: center;
+
+    transition: 0.3s;
+}
+.skills h3{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+.fa-keyboard{
+    font-size: 50px;
+}
+.skills li:hover{
+    background-color: #ff6a6a;
+    color: white;
+    transform: scale(1.05);
+}
+
+.bg{
+    width: 100%;
+    height: 800px;
+
+    background: url(bg2.jpg) no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed;
+}
+
+.projects{
+    height: 700px;
+}
+
+.contact{
+    width: 100%;
+    height: 800px;
+}
+.contact-inner{
+    width: 1200px;
+    height: 800px;
+    margin: 0 auto;
+}
+.contact h2{
+    font-size: 30px;
+    color: #ff6a6a;
+}
+.contact h1{
+    font-size: 50px;
+}
+.contact .contacts{
+    width: 1200px;
+    height: 800px;
+    
+    display: flex;
+}
+.contact .contacts .left{
+    width: 400px;
+    height: 800px;
+}
+.contact .contacts .right{
+    width: 800px;
+    height: 800px;
+} 
+.info{
+
+}
+.info li{
+    font-size: 23px;
+    border: 1px solid #eee;
+    margin-top: 20px;
+
+    width: 350px;
+    height: 130px;
+    font-weight: bold;
+    padding-left: 25px;
+    padding-top: 30px;
+}
+.contact .right h5{
+    font-weight:  normal;
+
+    margin-top: 30px;
+}
+.contact .right input{
+    width: 700px;
+    height: 30px;
+}
+.contact .right textarea{
+    width: 700px;
+    height: 300px;
+}
+.contact .right button{
+    width: 700px;
+    height: 30px;
+    background-color: orange;
+    color: white;
+
+    margin-top: 20px;
+    border: none;
+}
